<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.RecipeActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_recipe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_recipe_poster"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/recipe_poster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageView
                android:id="@+id/iv_recipe_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:contentDescription="@string/recipe_icon_desc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_recipe_poster"
                app:srcCompat="@drawable/ic_cooking_icon" />

            <TextView
                android:id="@+id/tv_recipe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:textColor="@color/colorSecondary"
                android:textSize="@dimen/text_title"
                app:layout_constraintStart_toEndOf="@+id/iv_recipe_icon"
                app:layout_constraintTop_toBottomOf="@+id/iv_recipe_poster"
                tools:text="Cake Name" />

            <TextView
                android:id="@+id/tv_serving_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_servings"
                android:layout_marginStart="@dimen/margin_small"
                app:layout_constraintStart_toEndOf="@+id/iv_recipe_icon"
                app:layout_constraintTop_toBottomOf="@+id/tv_recipe_name"
                tools:text="Servings:" />

            <TextView
                android:id="@+id/tv_serving_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                app:layout_constraintBottom_toBottomOf="@+id/tv_serving_label"
                app:layout_constraintStart_toEndOf="@+id/tv_serving_label"
                app:layout_constraintTop_toTopOf="@+id/tv_serving_label"
                tools:text="4" />

            <ImageView
                android:id="@+id/iv_chevron_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:contentDescription="@string/chevron_right_desc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_recipe_poster"
                app:srcCompat="@drawable/ic_chevron_right" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>